--- a/esercizio_flask/templates/modifica.html
+++ b/esercizio_flask/templates/modifica.html
@@ -7,12 +7,13 @@
 </head>
 <body>
    <h1>Modifica profilo</h1> 
-   <form method="post">
-    <label>Nome: <input type="text" name="Nome" value="{{ Nome.utente }}"></label><br>
-    <label>Cognome: <input type="text" name="Cognome" value="{{ Cognome.utente }}"></label><br>
-    <label>Scuola: <input type="text" name="Scuola" value="{{ dati.Scuola}}"></label><br>
-    <label>Hobby: <input type="text" name="Hobby" value="{{ utente.Hobby }}"></label><br>
+   <form action="{{url_for('modifica_profilo')}}"method='post'>
+    <p>Nome: </p>
+    <input type="text" id="nome" name="nome"><br>
+    <p>Cognome: </p>
+    <input type="text" id="cognome" name="cognome"><br>
     <button type="submit">Salva modifiche</button>
+<a href="{{url:for ('home') }}">torna alla pagina Home</a>
 </form>
 </body>
 </html>
